--- a/sw.css
+++ b/sw.css
@@ -18,9 +18,11 @@ body, nav, header, footer {
 
 
 /*--------HEADER------------*/
+
 header {
     text-align: center;
 }
+
 
 header h1 {
     color: white;
@@ -32,17 +34,19 @@ header h1 {
 /*---------BODY-------------*/
 
     body {
-        background-color: #757575;
+        background-color: #414141;
     }
 
 
 
 
 /*-----------CARDS-----------*/
+
 #container {
     display: flex;
     flex-flow: wrap row;
-    padding: 1rem auto;
+    padding: 1rem 5rem;
+    justify-content: center;
 }
 
 /*--------Card--------------*/
@@ -133,21 +137,33 @@ header h1 {
     }
 
     #backblock {
+        font-size: .9rem;
         padding: 0 1rem;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
     }
  
     #back-left p {
         color: rgb(155, 155, 155);
-        margin: .6rem 0 1rem;
+        margin: .8rem 0 1rem;
     }
 
     #back-right p {
-        margin: .6rem 0 1rem;
+        text-align: right;
+        margin: .8rem 0 1rem;
         color: #e4e4e4;
         text-transform: uppercase;
     }
+
+/* New Card*/
+
+legend {
+}
+
+fieldset {
+    display: flex;
+}
+
 
 
 /*----------FOOTER----------*/
