--- a/sw.css
+++ b/sw.css
@@ -158,12 +158,58 @@ header h1 {
 /* New Card*/
 
 legend {
+    text-align: center;
+}
+
+.two {
+    display: block;
+    padding-top: 1rem;
+}
+
+label {
+   font-size: .9rem;
+   color: #DCF2F0;
+   padding-bottom: .25rem;
+}
+
+.button {
+    border-radius: .5rem;
+    font-size: 1.25rem;
+    padding: .25rem 1rem;
+    width: 50%;
+    margin: 1.5rem auto .5rem;
+
+}
+
+.box {
+    color: black;
+    border: .25px solid #CBE1E0;
+    background-color: #ffffff;
+    border-radius: .5rem;
+    padding: .4rem;
+    margin-left: .3rem;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.568) inset;
+    
+}
+
+.formline {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 fieldset {
     display: flex;
+    justify-content: center;
+    width: 20rem;
+    border-radius: .5rem;
 }
 
+form {
+    display: flex;
+    justify-content: center;
+}
 
 
 /*----------FOOTER----------*/
